[package]
name = "quasi_iter"
version = "0.1.3"
edition = "2021"
description = "A library that contains supplementary iterator objects and methods."
license = "Apache-2.0"
repository = "https://github.com/shunski/quasi_iter.git"
authors = ["Shunsaku Yadokoro"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
